# token-launch

./: .gitignore  Cargo.toml  Readme.md  package-lock.json  package.json  tsconfig.json
program/: Cargo.toml
program/src/: constants.rs  entrypoint.rs  lib.rs  state.rs  util.rs
program/src/cpi/: initialize_mint.rs  initialize_token_account.rs  mint_to.rs  mod.rs  set_authority.rs
program/src/processor/: launch_asset.rs  mod.rs
tests/: test.ts
tests/setup/: data.ts  utils.ts
