[workspace]
members = [
    "bin",
    "program",
]

resolver = "2"

[workspace.dependencies]
solana-program = "1.18.11"
spl-token = "4.0.0"
borsh = "0.9.3"
thiserror = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.25", features = ["full", "rt", "rt-multi-thread", "macros"] }
serde_json = "1.0"
getrandom = { version = "0.1.16", features = ["dummy"] }