[package]
name = "token-launch"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "token_launch"

[build]
target-dir = "target-program"

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true } 
getrandom = { workspace = true } 

[dev-dependencies]
tokio = { workspace = true } 

[features]
no-entrypoint = []